no more overflow issues

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -438,9 +438,8 @@ button {
   }
 
   .full-width-image {
-    width: 140%;
-    margin: -80px 0px;
-    margin-left: -20%;
+    width: 100%;
+    margin: -80px 0px -40px 0px;
   }
 
   .tutorial-card-container {
@@ -449,8 +448,8 @@ button {
   }
 
   .product-image {
-    width: 140%;
-    margin-left: -20%;
+    width: 100%;
+    height: 400px;
   }
 
   .list-toggles {
@@ -530,11 +529,11 @@ button {
 
   .hero-container {
     height: auto;
-    padding-bottom: 40px;
+    max-height: 550px;
   }
 
   .product-image {
-    height: 500px;
+    height: 300px;
   }
   
 }
